--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -1,3 +1,5 @@
 FROM php:7.2.7-apache
-RUN apt-get update
-RUN docker-php-ext-install mysqli
+
+RUN apt-get update && \
+    docker-php-ext-install mysqli && \
+    pecl install xdebug
