--- a/php/conf/php.ini
+++ b/php/conf/php.ini
@@ -4,3 +4,15 @@ date.timezone = "Asia/Tokyo"
 [mbstring]
 mbstring.internal_encoding = "UTF-8"
 mbstring.language = "Japanese"
+
+[xdebug]
+; xdebugのインストール先を指定(Dockerコンテナ内)
+zend_extension=/usr/local/lib/php/extensions/no-debug-non-zts-20170718/xdebug.so
+xdebug.remote_enable=1
+xdebug.remote_autostart=1
+; デバッグで使用するポートを指定(デフォルト値)
+xdebug.remote_port=9001
+; Dockerコンテナ内部から見たホストを指定
+xdebug.remote_host=host.docker.internal
+; ログ出力先
+xdebug.remote_log=/var/log/xdebug/xdebug.log
